--- a/mvc/CI-Platform/CI-Platform-web/Views/Admin/_AddOrUpdateMission.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Admin/_AddOrUpdateMission.cshtml
@@ -252,7 +252,7 @@
             <div class="card drag-card" style="border: none;">
                 <div class="drag-area" id="mission-doc-drop-area">
                     <span class="visible">
-                        <span class="select" role="button"><img src="~/images/drag-and-drop.png"></span>
+                        <span class="select" role="button"><img src="~/images/drag-and-drop-doc.png" style="width:100px; height: 100px;"></span>
                     </span>
                     <span class="on-drop">Drop documents here</span>
                 </div>
