--- a/mvc/CI-Platform/CI-Platform-web/Views/Admin/_StoryDetailsPartial.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Admin/_StoryDetailsPartial.cshtml
@@ -103,8 +103,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <input name="HiddenStoryId" class="HiddenStoryId" type="hidden" />
-                                    <input name="HiddenStatus" id="HiddenStatus" type="hidden" />
+                                    
                                     <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
@@ -114,7 +113,7 @@
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="me-3 btn rounded-pill btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
-                                    <button type="submit" asp-controller="Admin" asp-action="ApproveOrDeclineStory" class="btn rounded-pill btn-outline-success">Yes</button>
+                                    <button type="submit" id="StoryApproveOrDeclineBtn"  class="btn rounded-pill btn-outline-success">Yes</button>
 
                                 </div>
                             </div>
