--- a/mvc/CI-Platform/CI-Platform-web/Views/Admin/_AddOrUpdateMission.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Admin/_AddOrUpdateMission.cshtml
@@ -159,7 +159,7 @@
                         <option value="" selected disabled hidden">Select Avaliability</option>
                         <option value="daily">daily</option>
                         <option value="weekly">weekly</option>
-                        <option value="week-end">week-end</option>
+                        <option value="weekend">week-end</option>
                         <option value="monthly">monthly</option>
                     </select>
                 </div>
