--- a/mvc/CI-Platform/CI-Platform-web/Views/Home/HomePage.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Home/HomePage.cshtml
@@ -19,8 +19,9 @@
 }
 @model CI_Platform.Entities.ViewModels.PageListViewModel
 
-
-
+@*<div class="ajax-loader">
+    <img src="~/images/loader-img.gif" class="img-responsive" />
+</div>*@
 
 <!-- Main content starts from here -->
 <!-- selected filters div -->
