--- a/mvc/CI-Platform/CI-Platform-web/Views/Home/_MissionDisplayPartial.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Home/_MissionDisplayPartial.cshtml
@@ -12,7 +12,9 @@
     var CountryId = customClaimValue.CountryId;
     var CityId = customClaimValue.CityId;
 }
-
+@*<div class="ajax-loader">
+    <img src="~/images/loader-img.gif" class="img-responsive" />
+</div>*@
 
 <script>
     if (localStorage.getItem('view') == 1) {
