--- a/mvc/CI-Platform/CI-Platform-web/Views/Shared/PageNotFound.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Shared/PageNotFound.cshtml
@@ -3,7 +3,8 @@
     ViewData["Title"] = "PageNotFound";
     Layout = "";
 }
+<div class="container align-content-center ">
 
-<h1>PageNotFound</h1>
-<img src="~/images/404-Page-image.png"  alt="404-img"/>
-
+    <h1 class="text-center m-5 p-5">Page Not Found</h1>
+<img class="mx-auto d-block" src="~/images/404-Page-image.png"  alt="404-img"/>
+</div>
