--- a/mvc/CI-Platform/CI-Platform-web/Views/Shared/_SearchNav.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Shared/_SearchNav.cshtml
@@ -1,6 +1,8 @@
 ﻿
 <!-- search Nav bar starts here -->
-
+@*<div class="ajax-loader">
+    <img src="~/images/loader-img.gif" class="img-responsive" />
+</div>*@
 <div class="container justify-content-between d-flex">
     <div class="d-flex  col-auto">
       
