--- a/mvc/CI-Platform/CI-Platform-web/Views/Story/StoryDetails.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Story/StoryDetails.cshtml
@@ -17,6 +17,9 @@
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+@if(Model.GetStoryDetails.StoryId != 0)
+{
+    
 
 <div class="container py-5">
     <div class="row">
@@ -198,8 +201,12 @@
             </div>
         </div>
     </div>
-</div>
-
+    </div>
+}
+else
+{
+    <partial name="PageNotFound"></partial>
+}
 <script>
    
 
