--- a/mvc/CI-Platform/CI-Platform-web/wwwroot/css/HomePage.css
+++ b/mvc/CI-Platform/CI-Platform-web/wwwroot/css/HomePage.css
@@ -4,6 +4,21 @@ body {
 /*    color: #414141;*/
 }
 
+.ajax-loader {
+    visibility: hidden;
+    background-color: rgba(255,255,255,0.7);
+    position: absolute;
+    z-index: +100 !important;
+    width: 100%;
+    height: 100%;
+}
+
+    .ajax-loader img {
+        position: relative;
+        top: 50%;
+        left: 45%;
+    }
+
 a,li,button,h3 {
     font-family: 'NotoSans';
     color: #414141;
