--- a/mvc/CI-Platform/CI-Platform-web/Views/VolunteeringTimesheet/VolunteeringTimesheet.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/VolunteeringTimesheet/VolunteeringTimesheet.cshtml
@@ -72,7 +72,7 @@
 
                                                 </div>
                                                 <div class="col-md-6">
-                                                    <label asp-for="TimeViewModel.TimeMinutes" for="MissionMinutes" class="form-label">Hours</label>
+                                                    <label asp-for="TimeViewModel.TimeMinutes" for="MissionMinutes" class="form-label">Minutes</label>
                                                     <input asp-for="TimeViewModel.TimeMinutes" name="TimeViewModel.TimeMinutes" type="text" class="form-control" placeholder="Enter Spent Minutes" id="TimeMinutes">
                                                     <span asp-validation-for="TimeViewModel.TimeMinutes" class="validate-text text-danger"></span>
 
