--- a/mvc/CI-Platform/CI-Platform-web/Views/Home/MissionDetail.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Home/MissionDetail.cshtml
@@ -407,7 +407,7 @@
                 </div>
                 <div id="Organization" class="container tab-pane fade">
                     <br>
-                    <h3>Organization </h3>
+                    <h3>@Model.MissionDetails.OrganizationName </h3>
                     <p>@Html.Raw(Model.MissionDetails.OrganizationDetail)</p>
                 </div>
                 <div id="Comments" class="container tab-pane fade">
