--- a/mvc/CI-Platform/CI-Platform-web/wwwroot/css/AdminStyle.css
+++ b/mvc/CI-Platform/CI-Platform-web/wwwroot/css/AdminStyle.css
@@ -193,7 +193,20 @@ main {
         grid-row: 1 / 2;
         transition: 0.3s;
     }
+.ajax-loader {
+    visibility: hidden;
+    background-color: rgba(255,255,255,0.7);
+    position: absolute;
+    z-index: +100 !important;
+    width: 100%;
+    height: 100%;
+}
 
+    .ajax-loader img {
+        position: relative;
+        top: 50%;
+        left: 45%;
+    }
 /* .icon i:last-child {
   opacity: 0;
   color: #F88634;
